edition = "2023";

message PreferenceMap {
  map<string, Value> preferences = 1;
}

message Value {
  oneof value {
    bool boolean = 1;
    float float = 2;
    int32 integer = 3;
    int64 long = 4;
    string string = 5;
    StringSet string_set = 6;
    double double = 7;
    bytes bytes_array = 8;
  }
}

message StringSet {
  repeated string strings = 1;
}